--- a/index.html
+++ b/index.html
@@ -317,6 +317,22 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
   opacity: 1;
   transform: translateY(0);
 }
+/* Responsive Hero e Laptop */
+@media (max-width: 992px) {
+  .hero { flex-direction: column; padding: 30px 20px; min-height: auto; }
+  .hero-left img { max-width: 100%; transform: translateX(0) translateY(0); }
+  .hero-right { top: 0; margin-top: 20px; }
+  .menu { flex-direction: row; top: -20px; left: 50%; transform: translateX(-50%); gap: 10px; font-size: 1em; justify-content: center; }
+}
+@media (max-width: 768px) {
+  .downloads { flex-direction: column; align-items: center; gap: 15px; }
+  .store-buttons { flex-direction: row; gap: 15px; align-items: center; }
+  .store-buttons img { height: 45px; }
+  .downloads .qr { height: 100px; }
+  .laptop-box { padding: 30px 20px; min-height: auto; }
+  .image-wrapper img { max-width: 100%; }
+  .image-wrapper p { font-size: 1.3em; margin-bottom: 20px; }
+}
 </style>
 </head>
 <body>
