--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
     width: 100%;
     padding: 3vw 0;
     padding-bottom: 10vw; /* spazio extra sotto per debug */ 
+    transform: translateX(-3%);
   }
   @media (max-width: 768px) {
   .mobile-menu .social-icons a {
@@ -340,6 +341,11 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
   .image-wrapper p { font-size: 4vw; margin-bottom: 3vw; }
 }
 
+.feature-box,
+.laptop-box {
+  border-radius: 40px; /* aumenta il valore per angoli più arrotondati */
+}
+
 @media (max-width: 768px) {
   /* Shift globale di tutto il contenuto mobile di 2% a destra */
   body {
@@ -371,6 +377,11 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
   </div>
 </div>
 
+<!-- Feature sections, laptop, contatti, faq, footer rimangono invariati -->
+ <!-- Logo Banner -->
+ <div class="logo-banner">
+  <img src="images/logo_banner.png" alt="Logo App">
+</div>
 <!-- Hero -->
 <div class="hero-wrapper">
   <div class="hero">
@@ -408,11 +419,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
   </div>
 </div>
 
-<!-- Feature sections, laptop, contatti, faq, footer rimangono invariati -->
- <!-- Logo Banner -->
-<div class="logo-banner">
-  <img src="images/logo_banner.png" alt="Logo App">
-</div>
+
 
 <!-- Le sezioni feature rimangono invariate, stessa struttura che hai già -->
 <!-- ... -->
