finished, needs links to social

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
 <div class="mobile-menu">
   <div class="menu">
     <a href="#">Signup</a>
-    <a href="#contacts">Contacts</a>
+    <a href="#contacts">Contatti</a>
     <a href="#faq">FAQ</a>
   </div>
   <div class="social-icons">
@@ -388,7 +388,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
     <div class="hero-left">
       <div class="menu">
         <a href="#">Signup</a>
-        <a href="#contacts">Contacts</a>
+        <a href="#contacts">Contatti</a>
         <a href="#faq">FAQ</a>
         <div class="social-icons">
           <a href="#" title="Facebook">
@@ -405,9 +405,9 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
       <img src="images/LM.png" alt="App preview">
     </div>
     <div class="hero-right">
-      <h1>La tua nuova App sta arrivando</h1>
-      <a href="https://forms.gle/INSERISCI_IL_TUO_LINK" target="_blank" class="cta">Iscriviti</a>
-      <p>Semplifica la tua vita con una nuova esperienza digitale.<br>Unisciti alla lista d'attesa per provare la beta in anteprima!</p>
+      <h1>La tua Mappa sta arrivando!</h1>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdGhu-FY6OYYPrtIbDS2nk50p_qC2ISOs2gr3TVV34qHnS3CQ/viewform?usp=header" target="_blank" class="cta">Iscriviti</a>
+      <p>Per navigare nel mondo dell'intrattenimento dal palmo della mano.<br>Unisciti alla lista d'attesa per provare la beta in anteprima!</p>
       <div class="downloads">
         <img src="images/qrFM.png" alt="QR Code" class="qr">
         <div class="store-buttons">
@@ -473,29 +473,31 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
   <div class="contact-section" id="contacts">
     <h2>Contatti</h2>
     <p>Hai domande o vuoi metterti in contatto con noi? Scrivici a:</p>
-    <p><a href="mailto:tuoemail@example.com" style="color:#fff; text-decoration:underline;">tuoemail@example.com</a></p>
+    <p><a href="mailto:tuoemail@example.com" style="color:#28CCCB; text-decoration:underline;">hello.filmapp@gmail.com</a></p>
+    <p>Vuoi entrare nella nostra community? Contattaci ora!</p>
+    <p><a href="mailto:tuoemail@example.com" style="color:#28CCCB; text-decoration:underline;">hello.filmapp+apply@gmail.com</a></p>
   </div>
   
   <!-- FAQ -->
   <div class="faq-section" id="faq">
     <h2>- FAQ -</h2>
-    <details><summary>Cos'è [Nome App]?</summary><p>È un'app che semplifica la tua vita digitale, offrendoti [breve descrizione funzione principale].</p></details>
+    <details><summary>Cos'è filMapp?</summary><p>È la prima app italiana per trovare risorse e fornitori per la produzione audiovisiva, con ricerca geolocalizzata, contatti diretti e una vetrina costantemente aggiornata.</p></details>
     <details><summary>Quando sarà disponibile?</summary><p>La beta sarà lanciata nei prossimi mesi. Registrati per ricevere aggiornamenti.</p></details>
     <details><summary>È gratuita?</summary><p>Sì, la versione beta è completamente gratuita.</p></details>
-    <details><summary>Per quali dispositivi?</summary><p>Disponibile per Android e iOS. Valuteremo altre piattaforme in futuro.</p></details>
+    <details><summary>Per quali dispositivi?</summary><p>Disponibile per Android,iOS e accessibile anche da Web.</p></details>
     <details><summary>Serve creare un account?</summary><p>Sì, l'account ti permette di salvare le tue preferenze e sincronizzare i dati.</p></details>
     <details><summary>L'app funziona offline?</summary><p>Alcune funzionalità richiedono connessione internet, altre funzionano offline.</p></details>
     <details><summary>I miei dati sono sicuri?</summary><p>Proteggiamo i tuoi dati con standard di sicurezza elevati e crittografia.</p></details>
-    <details><summary>Come contattare il supporto?</summary><p>Puoi scriverci a [email/supporto] o usare il modulo contatti nel sito.</p></details>
+    <details><summary>Come contattare il supporto?</summary><p>Puoi scriverci a hello.filmapp@gmail.com</p></details>
   </div>
   
   <!-- Footer -->
   <footer>
     <img src="images/logo.png" alt="Logo App" style="width:80px; height:80px; margin-bottom:10px; border-radius:8px; display:block; margin-left:auto; margin-right:auto;">
-    <p style="margin:5px 0;">©2025 xxxxx. All Rights Reserved.</p>
+    <p style="margin:5px 0;">©2025 filMapp. All Rights Reserved.</p>
     <p style="margin:5px 0;">
-      <a href="https://docs.google.com/your_terms_link" target="_blank">Terms of Service</a>
-      <a href="https://docs.google.com/your_privacy_link" target="_blank">Privacy Policy</a>
+      <a href="https://docs.google.com/document/d/1VrEJoEk2wAIhiPEhDGJPK8vgXf_hy_rjdTu8SLFUo1I/edit?usp=sharing" target="_blank">Terms of Service</a>
+      <a href="https://docs.google.com/document/d/1gq9QK974oX133rhWRqAUD2b_b6O362jWXgWPQ5qSBtQ/edit?usp=sharing" target="_blank">Privacy Policy</a>
     </p>
   </footer>
 
