t&Cs and Privacy added to the page

--- a/index.html
+++ b/index.html
@@ -509,8 +509,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
     <img src="images/logo.png" alt="Logo App" style="width:80px; height:80px; margin-bottom:10px; border-radius:8px; display:block; margin-left:auto; margin-right:auto;">
     <p style="margin:5px 0;">©2025 filMapp. All Rights Reserved.</p>
     <p style="margin:5px 0;">
-      <a href="https://docs.google.com/document/d/1VrEJoEk2wAIhiPEhDGJPK8vgXf_hy_rjdTu8SLFUo1I/edit?usp=sharing" target="_blank">Terms of Service</a>
-      <a href="https://docs.google.com/document/d/1LRQc8FqNva0xHjcIxkAfEZMT4LllbYHuZkqvYOks0KE/edit?usp=sharing" target="_blank">Privacy Policy</a>
+      <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms & Conditions</a>
     </p>
   </footer>
 
