signup link added

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
 <!-- Menu e social per mobile -->
 <div class="mobile-menu">
   <div class="menu">
-    <a href="#">Signup</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfZ4zmh92ik_C8NgdWceN9gbCs43LtY99qO7v91_Sca2cEYww/viewform?usp=dialog" target="_blank">Signup</a>
     <a href="#contacts">Contatti</a>
     <a href="#faq">FAQ</a>
   </div>
@@ -398,7 +398,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
   <div class="hero">
     <div class="hero-left">
       <div class="menu">
-        <a href="#">Signup</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfZ4zmh92ik_C8NgdWceN9gbCs43LtY99qO7v91_Sca2cEYww/viewform?usp=dialog" target="_blank">Signup</a>
         <a href="#contacts">Contatti</a>
         <a href="#faq">FAQ</a>
         <div class="social-icons">
