cliccable email FAQ

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
     <details><summary>Serve creare un account?</summary><p>Sì, l'account ti permette di salvare le tue preferenze e sincronizzare i dati.</p></details>
     <details><summary>L'app funziona offline?</summary><p>Alcune funzionalità richiedono connessione internet, altre funzionano offline.</p></details>
     <details><summary>I miei dati sono sicuri?</summary><p>Proteggiamo i tuoi dati con standard di sicurezza elevati e crittografia.</p></details>
-    <details><summary>Come contattare il supporto?</summary><p>Puoi scriverci a hello.filmapp@gmail.com</p></details>
+    <details><summary>Come contattare il supporto?</summary><p>Puoi scriverci a <a href="mailto:hello.filmapp@gmail.com">hello.filmapp@gmail.com</a></p></details>
   </div>
   
   <!-- Footer -->
