cliccable email colored

--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@ footer a { color: #fff; text-decoration: underline; margin: 0 10px; }
   <div class="faq-section" id="faq">
     <h2>- FAQ -</h2>
     <details><summary>Cos'è filMapp?</summary><p>È la prima app italiana per trovare risorse e fornitori per la produzione audiovisiva, con ricerca geolocalizzata, contatti diretti e una vetrina costantemente aggiornata.</p></details>
+    <details><summary>Come posso essere parte della community come fornitore di servizi?</summary><p>Cliccando su <strong>Signup</strong> potrai compilare un form di candidatura come fornitore. La tua richiesta verrà poi revisionata e, se approvata, verrai inserito nella vetrina dell’app.</p></details>
     <details><summary>Quando sarà disponibile?</summary><p>La beta sarà lanciata nei prossimi mesi. Registrati per ricevere aggiornamenti.</p></details>
     <details><summary>È gratuita?</summary><p>Sì, la versione beta è completamente gratuita.</p></details>
     <details><summary>Per quali dispositivi?</summary><p>Disponibile per Android,iOS e accessibile anche da Web.</p></details>
