added meta link for preview

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>filMapp</title>
 <link rel="icon" href="images/logo_20.png" type="image/png">
+
+<!-- Meta tag Open Graph per anteprima social -->
+<meta property="og:title" content="filMapp">
+<meta property="og:description" content="Il punto di incontro tra creativi e industria del cinema italiano">
+<meta property="og:image" content="https://filmapp-1.github.io/filMapp_landingpage/images/logo.png">
+<meta property="og:url" content="https://filmapp-1.github.io/filMapp_landingpage/">
+
+
 <style>
 html { scroll-behavior: smooth; }
 body {
